test_scripts/errors/multiline_while_error.shm
let i = 0;
while i < 3 {
    let x = undefined_var;
    i = i + 1;
}
